--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -14,7 +14,7 @@
 .pagination-item {
   display: block;
   padding: 1rem;
-  border: solid #eee;
+  border: solid #c2c2c2;
   border-width: 1px 0;
 
   &:first-child {
