--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -55,8 +55,8 @@ hr {
   position: relative;
   margin: 1.5rem 0;
   border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
+  border-top: 1px solid #c2c2c2;
+  border-bottom: 1px solid #c2c2c2;
 }
 
 abbr {
