--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,15 +13,15 @@ $blue: #268bd2;
 // $blue: #6a9fb5;
 $brown: #8f5536;
 
-$root-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$root-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 $root-font-size: 16px;
 $root-line-height: 1.5;
 
 $body-color: #515151;
-$body-bg: #fff;
+$body-bg: rgb(230, 230, 230);
 $link-color: $blue;
 
-$border-color: #e5e5e5;
+$border-color: #000;
 
 $large-breakpoint: 38em;
 $large-font-size: 20px;
