--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
+          <img class="header-icon" src="http://www.rgaston.com/assets/head-shot.jpg" alt="Rob Gaston">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
           <small>{{ site.tagline }}</small>
         </h3>
