--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -27,9 +27,9 @@ html {
 
 body {
   color: $body-color;
-  background-color: rgb(209, 209, 209);
+  background-color: #FDFBF7;
   background-size: 12px;
-  background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#cccccc%27%20width%3D%2712px%27%20height%3D%2712px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C2.121V0H9.879L0%2C9.879V12h2.121L12%2C2.121z%20M9.879%2C12L12%2C9.879V12H9.879z%20M0%2C2.121V0h2.121L0%2C2.121z%27/%3E%0A%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20xmlns%3Axlink%3D%27http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27%23fff8e8%27%20width%3D%2712px%27%20height%3D%2712px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C2.121V0H9.879L0%2C9.879V12h2.121L12%2C2.121z%20M9.879%2C12L12%2C9.879V12H9.879z%20M0%2C2.121V0h2.121L0%2C2.121z%27%2F%3E%0A%3C%2Fsvg%3E");
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
 }
